entrega final-mejoras

--- a/TP_clasificacion_AA1.ipynb
+++ b/TP_clasificacion_AA1.ipynb
@@ -18,9 +18,9 @@
    "source": [
     "INTEGRANTES:\n",
     "\n",
-    "Herrera Morena (H-1187/8)\n",
+    "- Herrera Morena (H-1187/8)\n",
     "\n",
-    "Zorzolo Rubio Juana (Z-1217/3)"
+    "- Zorzolo Rubio Juana (Z-1217/3)"
    ]
   },
   {
